sandbox/output
NumberParser.java:10: warning: [unchecked] unchecked call to add(E) as a member of the raw type ArrayList
                list.add(Integer.parseInt(str));
                        ^
  where E is a type-variable:
    E extends Object declared in class ArrayList
NumberParser.java:12: error: incompatible types: Object[] cannot be converted to int[]
            return list.toArray();
                               ^
1 error
1 warning
